# neural_rendering

./: LICENSE  README.md  Scene1.blend  Scene1.blend1  Scene2.blend  Scene2.blend1  Scene2.dae  Scene2.fbx  Scene4.blend  gen_data.py  get_matrix.py  script.py
main/: CMakeLists.txt
main/Check/: CMakeLists.txt  list_platforms.cpp
main/Data/chair/eval/: data.txt
main/Data/chair/training/: data.txt  scene.txt
main/Data/checkboard_plane/training/: data.txt
main/Data/droid/eval/: data.txt
main/Data/droid/training/: data.txt
main/Data/marble1/: data.txt
main/Data/marble1/eval/: data.txt
main/Data/marble1/training/: data.txt
main/Data/marble1_100/training/: scene.txt
main/Data/marble1_150/training/: data.txt
main/Data/marble1_50/eval/: data.txt
main/Data/marble1_50/training/: data.txt
main/Data/vader/training/: data.txt
main/Output/: ssim.py
main/Output/LightFieldInterpolation_Marble100/: SSIM.txt
main/Output/LightFieldInterpolation_Marble150/: SSIM.txt
main/Output/LightFieldInterpolation_Marble50/: SSIM.txt
main/Output/LightFieldInterpolation_chair100/: SSIM.txt
main/Output/LightFieldInterpolation_droid100/: SSIM.txt
main/Output/ViewDependentTextureMapping_Marble100/: SSIM.txt
main/Output/ViewDependentTextureMapping_Marble150/: SSIM.txt
main/Output/ViewDependentTextureMapping_Marble50/: SSIM.txt
main/Output/ViewDependentTextureMapping_chair100/: SSIM.txt
main/Output/ViewDependentTextureMapping_droid100/: SSIM.txt
main/Simple_Render/: CMakeLists.txt  LFViewWidget.cpp  LFViewWidget.h  LFViewWindow.cpp  LightFieldRenderer.cpp  LightFieldRenderer.h  Renderer.cpp  Renderer.h  Renderer23.cpp  Renderer23.h  SimpleRenderer.cpp  SimpleRenderer.h  ViewWidget.cpp  ViewWidget.h  ViewWindow.cpp  ViewWindow.h  main.cpp  simple_render.cl  simple_renderer.cl
main/Simple_Renderer/: CMakeLists.txt  LF_Renderer.pro  LightFieldInterpolation.cpp  LightFieldInterpolation.h  ProjectionRenderer.cpp  ProjectionRenderer.h  Renderer.cpp  Renderer.h  RendererUtils.h  SimpleRenderer.cpp  SimpleRenderer.h  ViewDependentTextureMapping.cpp  ViewDependentTextureMapping.h  ViewWidget.cpp  ViewWidget.h  ViewWindow.cpp  ViewWindow.h  light_field_interpolation.cl  main.cpp  projection_render.cl  projection_renderer.cl  simple_renderer.cl  view_dependent_texture_mapping.cl
main/task5/: CMakeLists.txt  LFViewWindow.h  main.cpp
marble1/: data.txt
